<resources>
    <string-array name="fonction_bord">
        <item>Commandant de bord</item>
        <item>Pilote</item>
        <item>Copilote</item>
        <item>"Membre d\'équipage"</item>
        <item>Elève pilote</item>
        <item>Instructeur</item>
    </string-array>

    <string name="frag_add_flight_date">DATE DU VOL</string>
    <string name="frag_add_flight_start_hour">Heure de début</string>
    <string name="frag_add_flight_end_hour">Heure de fin</string>
    <string name="frag_add_flight_hdv_jour">HDV jour</string>
    <string name="frag_add_flight_hdv_nuit">HDV nuit</string>
    <string name="frag_add_flight_function">Fonction à bord</string>
    <string name="frag_add_flight_nature">Nature du vol</string>
    <string name="frag_add_flight_help_autocomplete">Nature du vol</string>
    <string name="frag_add_flight_observation">Observations</string>
    <string name="frag_add_flight_type">TYPE</string>
    <string name="frag_add_flight_immat" translatable="false">IMMAT</string>
    <string name="frag_add_flight_is_ifr" translatable="false">IFR</string>
    <string name="frag_add_flight_ifr_arr">Arrivées ifr</string>
    <string name="frag_add_flight_simu">Simulation</string>
    <string name="frag_add_flight_multi">Multimoteurs</string>
    <string name="frag_add_flight_att">ATT</string>
    <string name="frag_add_flight_att_day">ATT de jour</string>
    <string name="frag_add_flight_att_night">ATT de nuit</string>
    <string name="frag_add_flight_save">Sauvegarder</string>
    <string name="frag_add_flight_tab_aircraft">Votre avion</string>
    <string name="frag_add_flight_tab_various">Divers</string>
    <string name="frag_number_picker_title">HDV de JOUR</string>
    <string name="frag_number_picker_duration_hour">Heures</string>
    <string name="frag_number_picker_duration_minute">Minutes</string>
    <string name="frag_one_flight_delete">Supprimer</string>
    <string name="frag_statistic_duration_hours">HDV Totale: %1$.1f avec %2$.1f de jour et %3$.1f de nuit. Avec <b>%4$.0f</b> vol effectués.</string>
    <string name="frag_statistic_att">ATT</string>
    <string name="nav_header_main_logo" translatable="false">Logo</string>
    <string name="nav_header_main_app_name">ASW/Carnet de vol</string>
    <string name="frag_pref_title_pn">Visite medicale</string>
    <string name="frag_pref_title_licence">Ma licence</string>
    <string name="frag_pref_date_default" translatable="false">01/06/2017</string>
    <string name="frag_pref_date_licence" translatable="false">Date</string>
    <string name="frag_pref_num_licence">Numéro</string>
    <string name="frag_pref_age">Age</string>
    <string name="frag_pref_date_medical">Certificat medical</string>
    <string name="frag_pref_date_medical_pn" translatable="false">Visite PN</string>
    <string name="act_main_drawer_my_flight">Mes vols</string>
    <string name="act_main_drawer_add">Ajouter un vol</string>
    <string name="act_main_drawer_stat">Statistique</string>
    <string name="act_main_drawer_racall">Mes rappels</string>
    <string name="act_main_drawer_communicate">Communiquer</string>
    <string name="act_main_drawer_contact">L\'auteur</string>
    <string name="act_main_action_settings">Paramètres</string>
    <string name="error_date">Erreur de date.</string>
    <string name="error_nb_heures">Entrez des heures de vol.</string>
    <string name="msg_save_flight">Vol enregistré.</string>
    <string name="msg_cancel">Annuler</string>
    <string name="msg_valide">Valider</string>
    <string name="msg_ras">RAS</string>
    <string name="error_empty_db">Aucun enregistrement.</string>
    <string name="rappel_pn">Visite PN</string>
    <string name="rappel_medical">Visite médicale</string>
    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="msg_quit">Quitter</string>
    <string name="contact_title">Titre</string>
    <string name="contact_email_ArkaSoftWare" translatable="false">fr.arka.soft@gmail.com</string>
    <string name="contact_subject">Sujet</string>
    <string name="msg_minute">minute(s)</string>
    <string name="msg_heure">heure(s)</string>
    <string name="msg_controleTemps">Temps total de </string>
    <string name="frag_one_flight_date">Vol du </string>
    <string name="frag_one_flight_function">Fonction</string>
    <string name="frag_one_flight_hour">Heures</string>
    <string name="frag_one_flight_hour_night">HDV de nuit</string>
    <string name="frag_one_flight_hour_day">HDV de jour</string>
    <string name="frag_one_flight_nature" translatable="false">Nature: </string>
    <string name="frag_one_flight_aircraft">Avion: </string>
    <string name="frag_one_flight_obs">Observations: </string>
    <string name="frag_one_flight_ifr">IFR</string>
    <string name="frag_one_flight_vfr" translatable="false">VFR</string>
    <string name="frag_one_flight_arr_ifr">Arrivée IFR: </string>
    <string name="frag_one_flight_multi">Multimoteurs</string>
    <string name="frag_one_flight_simu" translatable="false">Simulation</string>
    <string name="frag_one_flight_att_night">ATT de nuit</string>
    <string name="frag_one_flight_att_day">ATT de jour</string>
    <string name="frag_statistic_month">Mois</string>
    <string name="frag_statistic_years">Années</string>
    <string name="frag_statistic_error">Aucune HDV enregistré.</string>
    <string name="frag_statistic_day">HDV de jour %1$dh</string>
    <string name="frag_statistic_night">HDV de nuit %1$dh</string>
    <string name="frag_list_day">HDV de JOUR</string>
    <string name="frag_list_night">HDV de NUIT</string>
    <string name="msg_hours_start_before" translatable="false">Saisir l\'heure de début en premier.</string>
    <string name="dialog_mesg_delete">Etes vous sûr de vouloir supprimer ce vol ?</string>
    <string name="dialog_delete_title">Suppression.</string>
    <string name="dialog_delete_ok">Supprimer</string>
    <string name="dialog_delete_cancel">Annuler</string>
    <string name="frag_one_flight_mod">Modifier</string>
    <string name="frag_list_nb_flight">%d vols enregistrés</string>
    <string name="frag_statistic_error_att">Aucun ATT enregistré.</string>
    <string name="frag_statistic_repart_hdv">Répartition des HDV</string>
    <string name="frag_statistic_duration_att">ATT tolal: %1$d avec %2$d de jour et %3$d de nuit.</string>
    <string name="frag_statistic_error_att_and_hdv">Aucune HDV ou ATT.</string>
    <string name="act_main_action_export">Exporter le carnet de vol</string>
    <string name="msg_export">Carnet de vol exporté!</string>
    <string name="flight_db_help_export_name" translatable="false">carnet_de_vol.xml</string>
    <string name="frag_pref_fonction">Fonction</string>
    <string name="error_start_time">Entrez l\'heure de décollage.</string>
    <string name="act_main_action_import">Importer un carnet de vol</string>
    <string name="msg_import">Carnet de vol importé !</string>
    <string name="act_main_action_delete_all">Tout supprimer</string>
    <string name="dialog_delete_all">Voulez vous tout supprimer ?</string>
    <string name="frag_statistic_att_night">ATT de nuit %1$dh</string>
    <string name="frag_statistic_att_day">ATT de jour %1$dh</string>
</resources>
